# kp

./: .gitignore  ANTIGRAVITY.md  CMakeLists.txt  README.md  antigravity.md  kp.sln  project.md  ПЗ.docx
kp/: kp.cpp  kp.vcxproj  kp.vcxproj.filters  main.cpp
kp/admin/: AdminPanel.cpp  AdminPanel.h  ConfigWizard.cpp  ConfigWizard.h  LogViewer.cpp  LogViewer.h
kp/auth/: AuthManager.cpp  AuthManager.h  AuthMenu.cpp  AuthMenu.h  Login.cpp  Login.h  Register.cpp  Register.h  UserStruct.h
kp/clients/: Billing.cpp  Billing.h  ClientManager.cpp  ClientManager.h  ClientMenu.cpp  ClientMenu.h  ClientStruct.h  TariffStruct.h
kp/core/: Database.cpp  Database.h  InputHandler.cpp  InputHandler.h  Logger.cpp  Logger.h  Render.cpp  Render.h  Utils.cpp  Utils.h
kp/data/: billing_state.json  clients.json  logs.txt  tariffs.json  users.json
kp/user/: HomeMenu.cpp  HomeMenu.h  UserStruct.h
obsidian/kp/: AdminPanel.md  AuthManager.md  AuthMenu.md  ClientManager.md  ClientMenu.md  Database.md  HomeMenu.md  InputHandler.md  Login.md  Register.md  Render.md  Администрирование.md  Аутентификация.md  Курсовой проект.md  Пользовательский интерфейс.md  Структуры данных.md  Управление клиентами.md  Хранилище данных.md  Ядро системы.md
obsidian/kp/.obsidian/: graph.json  workspace.json
